Fix 10 New Languages spacing

--- a/src/views/annual-report/2021/annual-report.scss
+++ b/src/views/annual-report/2021/annual-report.scss
@@ -1641,6 +1641,10 @@ img.comment-viz{
         }
     }
 
+    .new-languages {
+        margin-top: 24px;
+    }
+
     .year-in-review{
         position: relative;
         padding: 330px 0 180px 0;
